--- a/r2/example.ini
+++ b/r2/example.ini
@@ -152,7 +152,7 @@ authentication_provider = cookie
 # speed. don't worry, changing this won't break old passwords
 bcrypt_work_factor = 12
 
-# account used for default feedback messaging (can be /r/subreddit)
+# account used for default feedback messaging (can be /d/subreddit)
 admin_message_acct = reddit
 
 
@@ -598,4 +598,4 @@ comment_tree_version_weights = 1:1, 2:0
 # markdown message blurbs for the front page sidebar gold ad.
 # use **strong** markup for a larger font, and "  \n" (<br>) to separate lines.
 goldvertisement_blurbs = "Make reddit better. Try %(reddit_gold)." "This year, give the gift of %(reddit_gold)s.|(and you should probably also give some other, better gifts)"
-goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink and join us in [the lounge](/r/lounge)."
+goldvertisement_has_gold_blurbs = "**&ldquo;Exquisite!&rdquo;**  \nGrab a drink and join us in [the lounge](/d/lounge)."
